--- a/style.css
+++ b/style.css
@@ -42,57 +42,110 @@ nav img{
     color: red;
 }
 
-.button{
+.container {
     display: flex;
-    justify-content: space-around;
-    flex-wrap: wrap;  
-    padding: 30px;
-    gap: 70px;
+    align-items: center;
+    max-width: 1000px;
 }
 
-.button-a, .button-b, .button-c, .button-d, .button-e {
-    position: relative;
-    background-size: cover;
-    background-position: center;
-    color: #fff;
-    border-radius: 20px; 
-    padding: 20px;
-    overflow: hidden;
-    height: 200px;
-    width: 500px;
-    font-size: 25px;
+/* Configuração da imagem */
+.image-container img {
+    height: auto;
 }
 
-.button-a { background-image: url('./imagem/Vantagens-WPP.jpg'); }
-.button-b { background-image: url('./imagem/Vantagens-Loja.jpg'); }
-.button-c { background-image: url('./imagem/vantagensi.jpg'); }
-.button-d { background-image: url('./imagem/Vantagens-BSC.jpg'); }
-.button-e { background-image: url('./imagem/Vantagens-Loja.jpg'); }
-
-.button-a::before, .button-b::before, .button-c::before, .button-d::before, .button-e::before {
-    content: "";
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: linear-gradient(to top, rgba(209, 5, 5, 0.7), rgba(0, 0, 0, 0.5)); 
-    z-index: 1;
+/* Área dos botões */
+.buttons-container {
+    display: flex;
+    flex-direction: column;
+    
 }
 
-.button-a p, .button-b p, .button-c p, .button-d p, .button-e p,
-.button-a a, .button-b a, .button-c a, .button-d a, .button-e a,
-.button-a img, .button-b img, .button-c img, .button-d img, .button-e img {
-    position: relative;
-    z-index: 2;
-}
-
-.button a {
+/* Botões */
+.button {
+    display: flex;
+    align-items: center;
+    background: #D90505;
+    color: white;
     text-decoration: none;
+    padding: 10px 15px;
+    transition: transform 0.2s, background 0.3s;
+    font-weight: bold;
+    width: 420px;
+    height: 100px;
+    font-family: "Montserrat", serif;
+}
+
+.button img {
+    height: 25px;
+    margin-right: 10px;
+}
+
+.button:hover {
+    background: #A50404;
+    transform: scale(1.05);
+    transform-origin: center;
+}
+.button:last-child:hover {
+    transform-origin: bottom;
+}
+
+.vantagens{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-top: 40px;
+    background-color: #dfdfdf;
+    gap: 50px;
+    text-align: center; 
+}
+
+.vantagens h1{
+    font-family: "Montserrat", serif;
+    font-size: 40px;
+    text-align: center; 
+}
+
+.vantagens p{
+    font-size: 20px;
     color: #ffffff;
     font-family: "Montserrat", serif;
-    padding: 10px;
+    text-align: center; 
+    padding: 20px;
 }
+
+.vantagens img{
+    display: block;
+    margin: 0 auto; 
+    width: 15%;
+}
+
+.vantagens-gt{
+    display: grid;
+    grid-template-columns: 2fr 2fr;
+    gap: 20px;
+    grid-template-areas: "lo1 lo3" "lo2 lo4"; 
+}
+
+.lo1, .lo2, .lo3, .lo4{
+    background-color: #999999;
+    width: 350px;
+    height: 290px;
+    border-radius: 20px;
+    font-family: "Montserrat", serif;
+    align-items: center;
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+}
+
+.serasa{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+
 
 #menu {
     display: none;
@@ -137,47 +190,74 @@ nav img{
     margin-left: 20px;
 }
 
-.banner{
-    width: 100%;
-    height: auto;
-    object-fit: cover;
-    max-width: 100%;
+.navigation-mobile{
+    display: none;
 }
 
-.img2 {
-    width: 100%;
-    height: 100%; 
-    object-fit: cover; 
-    display: block;
-}
-.img1 {
-    width: 100%;
-    max-width: 200px;
-    height: auto; }
+/* 🔹🔹🔹 RESPONSIVIDADE 🔹🔹🔹 */
 
-@media (min-width: 1025px) {
-    #menu, .navigation-mobile, .navigation-mobile img, .img2 {
-        display: none;
-    }
-}
-
-@media (max-width: 576px){
-    .img1{
-        display: none;
+@media (min-width: 1024px) {
+    .container {
+        display: flex;
+        align-items: center;
+        max-width: 1000px;
     }
 
-    .img2 {
+}
+
+
+
+/* Telas até 1024px */
+@media (max-width: 1024px) {
+    .container {
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+    }
+
+    .image-container img {
+        max-width: 90%;
+    }
+
+    .buttons-container {
+        align-items: center;
+    }
+
+   
+
+}
+
+/* Telas até 768px */
+@media (max-width: 768px) {
+    .container {
+        flex-direction: column;
+    }
+
+    .image-container img {
+        max-width: 80%;
+    }
+
+    .buttons-container {
         width: 100%;
-        height: 100%; 
-        object-fit: cover; 
-        display: block;
-    }
-    
-    .navigation, #menu {
-        display: none;
+        align-items: center;
     }
 
-    .button{
-        width: 400px;
+    .button {
+        width: 80%;
+        font-size: 14px;
+        padding: 10px;
+    }
+}
+
+/* Telas até 480px */
+@media (max-width: 480px) {
+    .button {
+        width: 90%;
+        font-size: 13px;
+        padding: 8px;
+    }
+
+    .button img {
+        height: 24px;
     }
 }
