--- a/style.css
+++ b/style.css
@@ -304,10 +304,102 @@ nav img{
     color: white;
     font-size: 25px;
     font-weight: bold;
-    font-family: "Montserrat", serif;
+    font-family: "Montserrat", ;
 
   }
 
+  .modal-overlay {
+    display: none; 
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.6);
+    z-index: 1000;
+  }
+  
+  .form-box {
+    background-color: white;
+    padding: 20px;
+    width: 90%;
+    height: 300px;
+    max-width: 400px;
+    border-radius: 20px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+    margin: 20px auto; 
+    /* border: solid 2px #e43003; */
+  }
+  
+  .close-btnn {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    background: linear-gradient(to top, #d60707 10%, #d10606 50%, #860808 90%);
+    color: rgb(255, 255, 255);
+    border: none;
+    border-radius: 50%;
+    width: 40px;
+    height: 40px;
+    font-size: 30px;
+    cursor: pointer;
+    text-align: center;
+  }
+  /* 
+  .bt5 {
+    text-decoration: none;
+    padding: 10px 20px;
+    background-color: #007BFF;
+    color: white;
+    border-radius: 5px;
+    display: inline-block;
+    font-weight: bold;
+    text-align: center;
+    cursor: pointer;
+  }
+  
+  .bt5:hover {
+    background-color: #0056b3;
+  } */
+  
+  .title {
+    display: block;
+    font-size: 18px;
+    font-weight: bold;
+    margin-bottom: 15px;
+    text-align: center;
+    font-family: Arial, Helvetica, sans-serif;
+  }
+  
+  .form-container {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+  }
+  
+  .input {
+    width: 100%;
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 20px;
+  }
+  
+  .botao {
+    width: 100%;
+    padding: 10px;
+    background: linear-gradient(to top, #d60707 10%, #d10606 50%, #860808 90%);
+    color: white;
+    border: none;
+    border-radius: 20px;
+    cursor: pointer;
+    font-size: 16px;
+    margin-top: 20px;
+  }
+  
+  .botao:hover {
+    background-color: #a8470e;
+  }
+  
 
 
 #menu {
