--- a/style.css
+++ b/style.css
@@ -35,11 +35,11 @@ nav img{
     text-decoration: none;
     font-size: 20px;
     color: black;
-    font-family: "Montserrat", serif;
+    font-family: 'Montserrat', Arial, sans-serif;
 }
 
 .button-nav a span{
-    color: red;
+    color: #d71920;
 }
 
 .container {
@@ -48,23 +48,23 @@ nav img{
     max-width: 1000px;
 }
 
-/* Configuração da imagem */
+
 .image-container img {
     height: auto;
 }
 
-/* Área dos botões */
+
 .buttons-container {
     display: flex;
     flex-direction: column;
     
 }
 
-/* Botões */
+
 .button {
     display: flex;
     align-items: center;
-    background: #D90505;
+    background: #d71920;
     color: white;
     text-decoration: none;
     padding: 10px 15px;
@@ -72,7 +72,7 @@ nav img{
     font-weight: bold;
     width: 420px;
     height: 100px;
-    font-family: "Montserrat", serif;
+    font-family: 'Montserrat', Arial, sans-serif;
 }
 
 .button img {
@@ -101,7 +101,7 @@ nav img{
 }
 
 .vantagens h1{
-    font-family: "Montserrat", serif;
+    font-family: 'Montserrat', Arial, sans-serif;
     font-size: 40px;
     text-align: center; 
 }
@@ -109,7 +109,7 @@ nav img{
 .vantagens p{
     font-size: 20px;
     color: #ffffff;
-    font-family: "Montserrat", serif;
+    font-family: 'Montserrat', Arial, sans-serif;
     text-align: center; 
     padding: 20px;
 }
@@ -132,7 +132,7 @@ nav img{
     width: 350px;
     height: 290px;
     border-radius: 20px;
-    font-family: "Montserrat", serif;
+    font-family: 'Montserrat', Arial, sans-serif;
     align-items: center;
     text-align: center;
     display: flex;
@@ -154,13 +154,13 @@ nav img{
     align-items: center;
     height: auto;
     gap: 50px;
-    background: linear-gradient(to bottom, #D90505 50%, white 50%);}
+    background: linear-gradient(to bottom, #d71920 50%, white 50%);}
 
 
 .text-app{
     display: flex;
     flex-direction: column;
-    font-family: "Montserrat", serif;
+    font-family: 'Montserrat', Arial, sans-serif;
     gap: 30px;
     padding-top: 20px;
 }
@@ -189,7 +189,7 @@ nav img{
 .title-trc h4{
     font-size: 35px;
     font-weight: 300;
-    font-family: "Montserrat", serif;
+    font-family: 'Montserrat', Arial, sans-serif;
 
 }
 
@@ -291,7 +291,7 @@ nav img{
 
   .button-app{
     text-align: center;
-    background-color: #D90505;
+    background-color: #d71920;
     width:200px;
     height:40px;
     align-content: center;
@@ -304,7 +304,7 @@ nav img{
     color: white;
     font-size: 25px;
     font-weight: bold;
-    font-family: "Montserrat", ;
+    font-family: 'Montserrat', Arial, sans-serif;
 
   }
 
@@ -335,7 +335,7 @@ nav img{
     position: absolute;
     top: 10px;
     right: 10px;
-    background: linear-gradient(to top, #d60707 10%, #d10606 50%, #860808 90%);
+    background: linear-gradient(to top, #d71920 10%, #d71920 50%, #860808 90%);
     color: rgb(255, 255, 255);
     border: none;
     border-radius: 50%;
@@ -345,23 +345,7 @@ nav img{
     cursor: pointer;
     text-align: center;
   }
-  /* 
-  .bt5 {
-    text-decoration: none;
-    padding: 10px 20px;
-    background-color: #007BFF;
-    color: white;
-    border-radius: 5px;
-    display: inline-block;
-    font-weight: bold;
-    text-align: center;
-    cursor: pointer;
-  }
-  
-  .bt5:hover {
-    background-color: #0056b3;
-  } */
-  
+
   .title {
     display: block;
     font-size: 18px;
@@ -387,7 +371,7 @@ nav img{
   .botao {
     width: 100%;
     padding: 10px;
-    background: linear-gradient(to top, #d60707 10%, #d10606 50%, #860808 90%);
+    background: linear-gradient(to top, #d71920 10%, #d71920 50%, #860808 90%);
     color: white;
     border: none;
     border-radius: 20px;
@@ -410,7 +394,7 @@ nav img{
     left: 0;
     width: 100%;  
     height: 100%;  
-    background-color: rgba(195, 15, 15, 0.8); 
+    background-color: #d71920; 
     color: white;  
     flex-direction: column; 
     padding-top: 50px; 
