--- a/style.css
+++ b/style.css
@@ -415,6 +415,14 @@ nav img{
     align-items: center;
  }
 
+.containera::before {
+    content: "";
+    position: absolute;
+    top: -10px; bottom: -10px;
+    left: -10px; right: -10px;
+    background: transparent;
+}
+
 #menu {
     display: none;
     position: fixed; 
